--- a/static/templates/auth-methods-settings-admin.handlebars
+++ b/static/templates/auth-methods-settings-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="organization-settings" class="settings-section">
+<div id="organization-settings" class="settings-section" data-name="auth-methods">
     <div class="settings-section-title"><i class="icon-vector-lock settings-section-icon"></i>
         {{t "Authentication methods" }}</div>
   <form class="form-horizontal admin-realm-form">
