--- a/static/templates/settings/bot-list-admin.handlebars
+++ b/static/templates/settings/bot-list-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="admin-user-list" class="settings-section">
+<div id="admin-user-list" class="settings-section" data-name="bot-list-admin">
 <div class="settings-section-title"><i class="icon-vector-github settings-section-icon"></i>
 {{t "Bots" }}</div>
 <table class="table table-condensed table-striped wrapped-table">
