--- a/static/templates/settings/deactivated-users-admin.handlebars
+++ b/static/templates/settings/deactivated-users-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="admin-deactivated-users-list" class="settings-section">
+<div id="admin-deactivated-users-list" class="settings-section" data-name="deactivated-users-admin">
 <div class="settings-section-title"><i class="icon-vector-trash settings-section-icon"></i>
 {{t "Deactivated users" }}</div>
 <table class="table table-condensed table-striped">
