--- a/static/templates/settings/default-streams-list-admin.handlebars
+++ b/static/templates/settings/default-streams-list-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="admin-default-streams-list" class="settings-section">
+<div id="admin-default-streams-list" class="settings-section" data-name="default-streams-list">
 <div class="settings-section-title"><i class="icon-vector-exchange settings-section-icon"></i>
 {{t "Default streams"}}</div>
 
