--- a/static/templates/settings/emoji-settings-admin.handlebars
+++ b/static/templates/settings/emoji-settings-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="emoji-settings" class="settings-section">
+<div id="emoji-settings" data-name="emoji-settings" class="settings-section">
   <div class="settings-section-title"><i class="icon-vector-smile settings-section-icon"></i>
   {{t "Custom emoji" }}</div>
   <div class="admin-table-wrapper">
