--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="organization-settings" class="settings-section">
+<div id="organization-settings" data-name="organization-settings" class="settings-section">
 <div class="settings-section-title"><i class="icon-vector-gear settings-section-icon"></i>
 {{t "Organization settings" }}</div>
   <form class="form-horizontal admin-realm-form">
