--- a/static/templates/settings/streams-list-admin.handlebars
+++ b/static/templates/settings/streams-list-admin.handlebars
@@ -1,4 +1,4 @@
-<div id="admin-streams-list" class="settings-section">
+<div id="admin-streams-list" class="settings-section" data-name="streams-list-admin">
 <div class="settings-section-title"><i class="icon-vector-exchange settings-section-icon"></i>
 {{t "Delete streams" }}</div>
 
