--- a/templates/zerver/index.html
+++ b/templates/zerver/index.html
@@ -60,6 +60,9 @@ var page_params = {{ page_params }};
 <div id="right-screen" class="screen"></div>
 <div id="clear-screen" class="screen"></div>
 
+<div id="settings_overlay_container">
+  {% include "zerver/settings_overlay.html" %}
+</div>
 {% include "zerver/navbar.html" %}
 
 <div class="fixed-app">
