--- a/templates/zerver/navbar.html
+++ b/templates/zerver/navbar.html
@@ -55,12 +55,12 @@
                     </a>
                   </li>
                   <li title="{{ _('Settings') }}">
-                    <a href="#settings" data-toggle="tab">
+                    <a href="#settings">
                       <i class="icon-vector-wrench"></i> {{ _('Settings') }}
                     </a>
                   </li>
                   <li title="{{ _('Administration') }}" class="admin-menu-item">
-                    <a href="#administration" role="button" data-toggle="tab">
+                    <a href="#administration" role="button">
                       <i class="icon-vector-bolt"></i> {{ _('Administration') }}
                     </a>
                   </li>
