--- a/static/templates/subscription_table_body.handlebars
+++ b/static/templates/subscription_table_body.handlebars
@@ -1,4 +1,4 @@
-<div id="subscription_overlay" class="new-style">
+<div id="subscription_overlay" class="new-style" data-overlay="subscriptions">
     <div class="flex">
         <div class="subscriptions-container">
             <div class="subscriptions-header">
