--- a/templates/zerver/index.html
+++ b/templates/zerver/index.html
@@ -60,7 +60,7 @@ var page_params = {{ page_params }};
 <div id="right-screen" class="screen"></div>
 <div id="clear-screen" class="screen"></div>
 
-<div id="settings_overlay_container">
+<div id="settings_overlay_container" data-overlay="settings">
   {% include "zerver/settings_overlay.html" %}
 </div>
 {% include "zerver/navbar.html" %}
