--- a/static/styles/subscriptions.css
+++ b/static/styles/subscriptions.css
@@ -784,7 +784,8 @@ form#add_new_subscription {
 }
 
 #subscription_overlay {
-    display: none;
+    pointer-events: none;
+    opacity: 0;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -793,6 +794,8 @@ form#add_new_subscription {
     background-color: rgba(0,0,0,0.8);
     overflow: auto;
     z-index: 102;
+
+    transition: all 0.3s ease;
 }
 
 #subscription_overlay.show {
