--- a/templates/analytics/stats.html
+++ b/templates/analytics/stats.html
@@ -2,9 +2,43 @@
 {% block portico_content %}
 
 {{ minified_js('stats')|safe }}
-
+<html>
 <style type="text/css">
-    .graph_title {
+    p {
+        margin-bottom: 0px;
+    }
+    .sidebar {
+        width: 250px;
+        height: calc(100vh - 94px);
+        z-index: 2;
+        display: inline-block;
+        vertical-align: top;
+        border-right: solid #eee;
+    }
+    .nav {
+        margin-left: 20px;
+    }
+    .nav-subtitle {
+        font-size: 20px;
+        font-weight: 300;
+        margin-top: 40px;
+        margin-bottom: 7px;
+    }
+    .nav-link {
+        font-size: 16px;
+        margin-left: 25px;
+    }
+    .page-content {
+        width: calc(100% - 258px);
+        height: calc(100vh - 94px);
+        overflow: auto;
+        display: inline-block;
+        vertical-align: top;
+    }
+    .center-container {
+        min-height: 0px;
+    }
+    .graph-title {
         text-align: center;
         font-size: 22px;
         margin-bottom: 60px;
@@ -33,7 +67,7 @@
         border: none;
         border-radius: 4px;
     }
-    .pie_button {
+    .pie-button {
         font-family: 'Humbug', 'Helvetica Neue', Helvetica, Arial, sans-serif;
         font-weight: inherit;
         border: none;
@@ -126,12 +160,12 @@
     #pie_1 {
         display: inline-block;
         vertical-align: top;
-        margin: 40px;
+        margin: 100px 40px 0px 0px;
     }
     #pie_2 {
         display: inline-block;
         vertical-align: top;
-        margin: 40px;
+        margin: 100px 0px 0px 0px;
     }
     #pie1_total {
         font-size: 15px;
@@ -143,12 +177,31 @@
         text-align: left;
         margin: 0px 0px 10px 50px;
     }
+    @media(max-width: 1127px) {
+        #pie_1 {
+            margin-right: 0px;
+            margin-bottom: 40px;
+        }
+    }
+
 </style>
+<body>
+<div class="sidebar">
+    <nav class="nav">
+        <p class="nav-subtitle">Message Data</p>
+        <a href="#messages_timescale_anchor" class="nav-link">Messages Sent Over Time</a>
+        <a href="#messages_by_client_anchor" class="nav-link">Messages Sent by Client</a>
+        <a href="#messages_by_type_anchor" class="nav-link">Messages Sent by Type</a>
+        <p class="nav-subtitle">User Data</p>
+        <a href="#users_anchor" class="nav-link">Number of Users</a>
+    </nav>
+</div>
+<div class="page-content">
   <div id="id_stats_errors" class="alert alert-error"></div>
   <h3 class="login-page-header">Analytics</h3>
   <div class="center-container">
     <div class="center-block">
-      <p class="graph_title"> Messages Sent by Humans and Bots </p>
+      <p class="graph-title" id="messages_timescale_anchor"> Messages Sent by Humans and Bots </p>
       <div id="graph_container">
         <div id="button_container">
           <p id="button_label"> Aggregation </p>
@@ -164,30 +217,47 @@
   </div>
   <div class="center-container">
     <div class="center-block">
-      <p class="graph_title"> Number of Users</p>
+      <p class="graph-title" id="users_anchor"> Number of Users</p>
       <div id="id_number_of_users"></div>
     </div>
   </div>
   <div id="pie_container">
     <div id="pie_1">
-      <p class="graph_title"> Messages Sent by Client</p>
+      <p class="graph-title" id="messages_by_client_anchor"> Messages Sent by Client</p>
       <div id="id_messages_sent_by_client"></div>
       <div id="pie1_total"> </div>
-      <button class="pie_button" type="button" id='messages_by_client_realm_button'> Everyone </button>
-      <button class="pie_button" type="button" id='messages_by_client_user_button'> Me </button>
-      <button class="pie_button" type="button" id='messages_by_client_cumulative_button'> All time </button>
-      <button class="pie_button" type="button" id='messages_by_client_thirty_days_button'> Last 30 Days </button>
-      <button class="pie_button" type="button" id='messages_by_client_ten_days_button'> Last 10 Days </button>
+      <button class="pie-button" type="button" id='messages_by_client_realm_button'> Everyone </button>
+      <button class="pie-button" type="button" id='messages_by_client_user_button'> Me </button>
+      <button class="pie-button" type="button" id='messages_by_client_cumulative_button'> All time </button>
+      <button class="pie-button" type="button" id='messages_by_client_thirty_days_button'> Last 30 Days </button>
+      <button class="pie-button" type="button" id='messages_by_client_ten_days_button'> Last 10 Days </button>
     </div>
     <div id="pie_2">
-      <p class="graph_title"> Messages Sent by Message Type</p>
+      <p class="graph-title" id="messages_by_type_anchor"> Messages Sent by Message Type</p>
       <div id="id_messages_sent_by_message_type"></div>
       <div id="pie2_total"> </div>
-      <button class="pie_button" type="button" id='messages_by_type_realm_button'> Everyone </button>
-      <button class="pie_button" type="button" id='messages_by_type_user_button'> Me </button>
-      <button class="pie_button" type="button" id='messages_by_type_cumulative_button'> All time </button>
-      <button class="pie_button" type="button" id='messages_by_type_thirty_days_button'> Last 30 Days </button>
-      <button class="pie_button" type="button" id='messages_by_type_ten_days_button'> Last 10 Days </button>
+      <button class="pie-button" type="button" id='messages_by_type_realm_button'> Everyone </button>
+      <button class="pie-button" type="button" id='messages_by_type_user_button'> Me </button>
+      <button class="pie-button" type="button" id='messages_by_type_cumulative_button'> All time </button>
+      <button class="pie-button" type="button" id='messages_by_type_thirty_days_button'> Last 30 Days </button>
+      <button class="pie-button" type="button" id='messages_by_type_ten_days_button'> Last 10 Days </button>
     </div>
   </div>
+</div>
+</body>
+</html>
+
 {% endblock %}
+<script type="text/javascript">
+    // $(document).on('click', 'a', function(event){
+    //     console.log("clicked")
+    //     event.preventDefault();
+
+    //     $('html, body').animate({
+    //         scrollTop: $( $.attr(this, 'href') ).offset().top
+    //     }, 500);
+
+    //     // // ref is the height in 'px' to scroll to.
+    //     // $("body").animate({ scrollTop: $ref + "px" }, 500);
+    // });
+</script>
