Add call-to-action section.
This is a call to action section that resides at the bottom of the page
to direct a user to register for an account.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -196,6 +196,28 @@
         </div>
     </div>
 
+    <div class="call-to-action-bottom">
+        <div class="real-image"></div>
+        <div class="blur-outer">
+            <div class="blur-inner"></div>
+            <div class="inner-content">
+                <h1>Like what you see?</h1>
+                <a class="no-style"  href="/register">
+                    <button class="button grey-transparent" type="button" name="button">Register Now</button>
+                </a>
+
+                <div class="footer">
+                    <ul>
+                        <li>About</li>
+                        <li>Legal</li>
+                        <li>Help</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!--
     <div class="main">
         <div class="blog-posts">
             <div class="text-header">
