Add Zulip Octopus.
This adds the Zulip Octopus mascot to the footer at the
bottom of the site.

--- a/templates/zerver/hello.html
+++ b/templates/zerver/hello.html
@@ -206,6 +206,8 @@
                     <button class="button grey-transparent" type="button" name="button">Register Now</button>
                 </a>
 
+                <div class="zulip-octopus"></div>
+
                 <div class="footer">
                     <ul>
                         <li>About</li>
