--- a/templates/zerver/landing-nav.html
+++ b/templates/zerver/landing-nav.html
@@ -1,21 +1,28 @@
 <nav>
-    <div class="logo"></div>
-    <ul>
-        <li on-page="hello">
-            <a href="/hello/">Home</a>
-        </li>
-        <li on-page="features">
-            <a href="/features/">Features</a>
-        </li>
-        <li on-page="help">
-            <a href="/help/">Help Center</a>
-        </li>
-        <li>
-            <a href="/login/">Login</a>
-        </li>
-        <li>
-            <a href="/register/">Register</a>
-        </li>
-    </ul>
     <div class="clear-float"></div>
+    <div class="stripes"></div>
+    <div class="faded"></div>
+    <div class="faded-light"></div>
+    <div class="content">
+        <div class="logo"></div>
+        <ul>
+            <li on-page="hello">
+                <a class="no-style" href="/hello/">Home</a>
+            </li>
+            <li on-page="features">
+                <a class="no-style" href="/features/">Features</a>
+            </li>
+            <li on-page="help">
+                <a class="no-style" href="/help/">Help Center</a>
+            </li>
+            <li>
+                <a class="no-style" href="/login/">Login</a>
+            </li>
+            <li>
+                <a class="no-style" href="/register/">Register</a>
+            </li>
+        </ul>
+        <div class="clear-float"></div>
+    </div>
+    <svg height="32px" id="hamburger" style="enable-background:new 0 0 32 32;" version="1.1" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2  s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2  S29.104,22,28,22z"/></svg>
 </nav>
